<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">KernelConfig</string>
    <string name="action_settings">Settings</string>
    <string name="waiting">Waiting..</string>
    <string name="title_activity_config">WidgetConfiguration</string>
 	<string name="ok_button">OK</string>
	<string name="add_button">Add Row</string>
	<string name="remove_button">Remove Row</string>
	<string name="filepath">File Path:</string>
	<string name="browse_button">...</string>
	<string name="ConfigValues">Config Values:</string>
	<string name="DisplayValues">Display Values:</string>
</resources>
